--- a/external-info-service/src/main/resources/static/weather-stream-test.html
+++ b/external-info-service/src/main/resources/static/weather-stream-test.html
@@ -1,22 +1,26 @@
 <!-- weather-stream-test.html -->
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <title>날씨 SSE 테스트</title>
+    <title>SSE Test</title>
 </head>
 <body>
-<h1>날씨 실시간 수신 중</h1>
+<h2>실시간 날씨 스트림</h2>
 <pre id="output"></pre>
 
 <script>
-    const evtSource = new EventSource("http://localhost:8080/main/info/weather/stream");
+    const output = document.getElementById("output");
+    const evtSource = new EventSource("/main/info/weather/stream");
 
-    evtSource.addEventListener("weather-update", function (event) {
+    evtSource.addEventListener("weather-update", (event) => {
         const data = JSON.parse(event.data);
-        console.log("날씨 업데이트 수신:", data);
-        document.getElementById("output").textContent = JSON.stringify(data, null, 2);
+        output.textContent = JSON.stringify(data, null, 2);
     });
+
+    evtSource.onerror = (err) => {
+        console.error("SSE 오류", err);
+        output.textContent += "\n[SSE 오류]";
+    };
 </script>
 </body>
 </html>
